--- a/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/a/businesstype_list.html
+++ b/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/a/businesstype_list.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/webdesign/assets/css/main.css"/>
 </head>
 <body>
-     <div id="wrapper">
+     <div id="list_wrapper">
             <div id="main">
                 <table>
                     <thead>
