--- a/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/c/csgrade_list.html
+++ b/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/c/csgrade_list.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>상품목록조회</title>
+    <title>고객등급조회</title>
 
     <link rel="stylesheet" href="/css/common.css" />
     <link rel="stylesheet" href="/webdesign/assets/css/main.css" />
-    <link rel="stylesheet" href="/css/c/salesresult.css" />
+    <link rel="stylesheet" href="/css/c/customer.css" />
   </head>
   <body>
-    <div id="wrapper">
+    <div id="list_wrapper">
       <div id="main">
         <table>
           <thead>
@@ -35,7 +35,7 @@
                   <footer>
                     <ul class="actions">
                       <li>
-                        <button class="button large customer_type_select_btn">
+                        <button class="button large csgrade_type_select_btn">
                           SELECT
                         </button>
                       </li>
