--- a/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/common/header.html
+++ b/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/common/header.html
@@ -1,361 +1,353 @@
 <!DOCTYPE HTML>
-<html>
-	<head>
-		<title>ERPLAB</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="${pageContext.request.contextPath }/webdesign/assets/css/main.css" />
-		<link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css" />
-		
-		<!-- 로그인 세션 -->
-		<c:if test="${login == null }">
-			<script type="text/javascript">
-				alert("세션이 만료되었습니다.");
-				location.href="${pageContext.request.contextPath }/";
-			</script>
-		</c:if>
-		<c:if test="${comcode_code == null }"> 
-			<script type="text/javascript">
-				alert("세션이 만료되었습니다.");
-				location.href="${pageContext.request.contextPath }/";
-			</script>
-		</c:if>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+
+<th:block th:fragment="header">
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Header -->
+		<header id="header">
+			<h1><a href="/index">ERPlab</a></h1>
+			<nav class="links">
+			<!-- 인트라넷 애들은 로그인을 따로 할 수 있도록 나중에 수정 -->
+				<ul>
+					<li><a href="#">조직도</a></li>
+					<li><a href="#">일정</a></li>
+					<li><a href="#">주소록</a></li>
+					<li><a href="${#httpServletRequest.getContextPath()}/erpchat?comcode_code=${comcode_code}" target="_blank">메신저</a></li>
+					<li><a href="#">이메일</a></li>
+					<li><a href="#">연차</a></li>								
+				</ul>
+				<ul>
+					<li><a href="#">재고</a></li>
+					<li><a href="#">물류</a></li>
+					<li><a href="#">발주</a></li>
+					<li><a href="#">부서별매출</a></li>
+					<li><a href="#">프로젝트</a></li>
+					<li><a href="#">회사정보</a></li>
+					<li><a href="${#httpServletRequest.getContextPath()}/b11main?comcode_code=${comcode_code}">재무제표</a></li>
+				</ul>
+				
+			</nav>
 			
-	</head>
-	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper">
+			<nav class="loginSessionOutput">
+			    <div class="loginSessionView">
+	        		Remaining Session Time: <span id="sessionTime">Calculating...</span>					        				        
+			    </div>
+			</nav>
+			
+			
+			<nav class="main">
+				<ul>
+					<li class="menu">
+						<a class="fa-bars" href="#menu">Menu</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
 
-				<!-- Header -->
-					<header id="header">
-						<h1><a href="/index">ERPlab</a></h1>
-						<nav class="links">
-						<!-- 인트라넷 애들은 로그인을 따로 할 수 있도록 나중에 수정 -->
-							<ul>
-								<li><a href="#">조직도</a></li>
-								<li><a href="#">일정</a></li>
-								<li><a href="#">주소록</a></li>
-								<li><a href="${pageContext.request.contextPath}/erpchat?comcode_code=${comcode_code}" target="_blank">메신저</a></li>
-								<li><a href="#">이메일</a></li>
-								<li><a href="#">연차</a></li>								
-							</ul>
-							<ul>
-								<li><a href="#">재고</a></li>
-								<li><a href="#">물류</a></li>
-								<li><a href="#">발주</a></li>
-								<li><a href="#">부서별매출</a></li>
-								<li><a href="#">프로젝트</a></li>
-								<li><a href="#">회사정보</a></li>
-								<li><a href="${pageContext.request.contextPath}/b11main?comcode_code=${comcode_code}">재무제표</a></li>
-							</ul>
-							
-						</nav>
-						
-						<nav class="loginSessionOutput">
-						    <div class="loginSessionView">
-				        		Remaining Session Time: <span id="sessionTime">Calculating...</span>					        				        
-						    </div>
-						</nav>
-						
-						
-						<nav class="main">
-							<ul>
-								<li class="menu">
-									<a class="fa-bars" href="#menu">Menu</a>
-								</li>
-							</ul>
-						</nav>
-					</header>
+		<!-- Menu -->
+		<section id="menu">
 
-				<!-- Menu -->
-					<section id="menu">
+			<!-- Links -->
+			<section>
+				<ul class="links">
+					<li>
+							<h3>경영기획팀</h3>
+						<a th:href="@{/a/a1/a11/company}">
+							<p>회사정보</p>
+						</a>
+						<a href="#">
+							<p>사업자정보</p>
+						</a>
+						<a href="#">
+							<p>지점관리</p>
+						</a>
+					</li>
+					<li>
+							<h3>전략기획팀</h3>
+						<a href="#">
+							<p>프로젝트</p>
+						</a>
+						<a href="#">
+							<p>계약관리</p>
+						</a>
+						<a href="#">
+							<p>실적 / 평가</p>
+						</a>
+					</li>
+					<li>
+							<h3>회계팀</h3>
+						<a href="${#httpServletRequest.getContextPath()}/b11main?comcode_code=${comcode_code}">
+							<p>재무상태표</p>
+						</a>
+						<a href="${#httpServletRequest.getContextPath()}/b12main?comcode_code=${comcode_code}">
+							<p>손익계산서</p>
+						</a>
+						<a href="${#httpServletRequest.getContextPath()}/b13main?comcode_code=${comcode_code}">
+							<p>현금흐름표</p>
+						</a>
+					</li>
+					<li>
+							<h3>재무팀</h3>
+						<a href="#">
+							<p>계좌현황 및 관리</p>
+						</a>
+						<a href="#">
+							<p>자금관리</p>
+						</a>
+						<a href="#">
+							<p>예산관리</p>
+						</a>
+						<a href="${#httpServletRequest.getContextPath()}/b31main?comcode_code=${comcode_code}">
+							<p>전표입력</p>
+						</a>
+						<a href="${#httpServletRequest.getContextPath()}/b32main?comcode_code=${comcode_code}">
+							<p>전자세금계산서</p>
+						</a>
+						<a href="${#httpServletRequest.getContextPath()}/b33main">
+							<p>외화관리</p>
+						</a>
+						<a href="#">
+							<p>마감 / 결산</p>
+						</a>
+						<a href="#">
+							<p>원가분석</p>
+						</a>
+					</li>
+					<li>
+						<h3>인사팀</h3>
+							<a href="#">
+								<p>인사정보</p>
+							</a>
+							<a href="#">
+								<p>조직관리</p>
+							</a>
+							<a href="#">
+								<p>근태관리</p>
+							</a>
+							<a href="#">
+								<p>정산</p>
+							</a>
+							<a href="#">
+								<p>퇴직</p>
+							</a>
+					</li>
+					<li>
+						<h3>총무팀</h3>
+							<a href="#">
+								<p>기자재</p>
+							</a>
+							<a href="#">
+								<p>비품 / 소모품</p>
+							</a>
+					</li>
+					<li>
+						<h3>해외영업팀</h3>
+							<a href="#">
+								<p>해외거래처관리</p>
+							</a>
+							<a href="#">
+								<p>수출관리</p>
+							</a>
+							<a href="#">
+								<p>수입(매입)</p>
+							</a>
+							<a href="#">
+								<p>수입발주관리</p>
+							</a>
+					</li>
+					<li>
+						<h3>국내영업팀</h3>
+							<a href="#">
+								<p>국내거래처관리</p>
+							</a>
+							<a href="#">
+								<p>채권관리</p>
+							</a>
+							<a href="#">
+								<p>반품관리</p>
+							</a>
+							<a href="#">
+								<p>영업전표</p>
+							</a>
+							<a href="#">
+								<p>매출현황</p>
+							</a>
+					</li>
+					<li>
+						<h3>매장영업팀</h3>
+							<a href="#">
+								<p>매장관리</p>
+							</a>
+							<a href="#">
+								<p>발주관리</p>
+							</a>
+							<a href="#">
+								<p>고객관리</p>
+							</a>
+							<a href="#">
+								<p>창고관리</p>
+							</a>
+							<a href="#">
+								<p>행사관리</p>
+							</a>
+							<a href="#">
+								<p>온라인</p>
+							</a>
+					</li>
+					<li>
+						<h3>영업관리팀</h3>
+							<a href="#">
+								<p>영업실적관리</p>
+							</a>
+							<a href="#">
+								<p>부서별매출</p>
+							</a>
+					</li>
+					<li>
+						<h3>생산팀</h3>
+							<a href="#">
+								<p>생산 / 제조</p>
+							</a>
+							<a href="#">
+								<p>생산의뢰</p>
+							</a>
+							<a href="#">
+								<p>작업지시서</p>
+							</a>
+							<a href="#">
+								<p>생산실적관리</p>
+							</a>
+							<a href="#">
+								<p>작업실적관리</p>
+							</a>
+							<a href="#">
+								<p>불량분석</p>
+							</a>
+							<a href="#">
+								<p>공정재고관리</p>
+							</a>
+							<a href="#">
+								<p>발주관리</p>
+							</a>
+							<a href="#">
+								<p>매입관리</p>
+							</a>
+							<a href="#">
+								<p>재고관리</p>
+							</a>
+							<a href="#">
+								<p>재고평가</p>
+							</a>
+					</li>
+					<li>
+						<h3>구매팀</h3>
+							<a href="#">
+								<p>발주관리</p>
+							</a>
+							<a href="#">
+								<p>매입관리</p>
+							</a>
+							<a href="#">
+								<p>재고관리</p>
+							</a>
+							<a href="#">
+								<p>재고평가</p>
+							</a>
+					</li>
+					<li>
+						<h3>품질관리팀</h3>
+							<a href="#">
+								<p>품질검사</p>
+							</a>
+							<a href="#">
+								<p>설비 / 장비 관리</p>
+							</a>
+							<a href="#">
+								<p>클레임(기업)</p>
+							</a>
+							<a href="#">
+								<p>CS(소비자)</p>
+							</a>
+					</li>
+					<li>
+						<h3>물류팀</h3>
+							<a href="#">
+								<p>재고관리</p>
+							</a>
+							<a href="#">
+								<p>입출고관리</p>
+							</a>
+							<a href="#">
+								<p>폐기 / 물류 감소</p>
+							</a>
+					</li>
+				</ul>
+			</section>
 
-						<!-- Links -->
-							<section>
-								<ul class="links">
-									<li>
-											<h3>경영기획팀</h3>
-										<a href="#">
-											<p>회사정보</p>
-										</a>
-										<a href="#">
-											<p>사업자정보</p>
-										</a>
-										<a href="#">
-											<p>지점관리</p>
-										</a>
-									</li>
-									<li>
-											<h3>전략기획팀</h3>
-										<a href="#">
-											<p>프로젝트</p>
-										</a>
-										<a href="#">
-											<p>계약관리</p>
-										</a>
-										<a href="#">
-											<p>실적 / 평가</p>
-										</a>
-									</li>
-									<li>
-											<h3>회계팀</h3>
-										<a href="${pageContext.request.contextPath}/b11main?comcode_code=${comcode_code}">
-											<p>재무상태표</p>
-										</a>
-										<a href="${pageContext.request.contextPath}/b12main?comcode_code=${comcode_code}">
-											<p>손익계산서</p>
-										</a>
-										<a href="${pageContext.request.contextPath}/b13main?comcode_code=${comcode_code}">
-											<p>현금흐름표</p>
-										</a>
-									</li>
-									<li>
-											<h3>재무팀</h3>
-										<a href="#">
-											<p>계좌현황 및 관리</p>
-										</a>
-										<a href="#">
-											<p>자금관리</p>
-										</a>
-										<a href="#">
-											<p>예산관리</p>
-										</a>
-										<a href="${pageContext.request.contextPath }/b31main?comcode_code=${comcode_code}">
-											<p>전표입력</p>
-										</a>
-										<a href="${pageContext.request.contextPath }/b32main?comcode_code=${comcode_code}">
-											<p>전자세금계산서</p>
-										</a>
-										<a href="${pageContext.request.contextPath }/b33main">
-											<p>외화관리</p>
-										</a>
-										<a href="#">
-											<p>마감 / 결산</p>
-										</a>
-										<a href="#">
-											<p>원가분석</p>
-										</a>
-									</li>
-									<li>
-										<h3>인사팀</h3>
-											<a href="#">
-												<p>인사정보</p>
-											</a>
-											<a href="#">
-												<p>조직관리</p>
-											</a>
-											<a href="#">
-												<p>근태관리</p>
-											</a>
-											<a href="#">
-												<p>정산</p>
-											</a>
-											<a href="#">
-												<p>퇴직</p>
-											</a>
-									</li>
-									<li>
-										<h3>총무팀</h3>
-											<a href="#">
-												<p>기자재</p>
-											</a>
-											<a href="#">
-												<p>비품 / 소모품</p>
-											</a>
-									</li>
-									<li>
-										<h3>해외영업팀</h3>
-											<a href="#">
-												<p>해외거래처관리</p>
-											</a>
-											<a href="#">
-												<p>수출관리</p>
-											</a>
-											<a href="#">
-												<p>수입(매입)</p>
-											</a>
-											<a href="#">
-												<p>수입발주관리</p>
-											</a>
-									</li>
-									<li>
-										<h3>국내영업팀</h3>
-											<a href="#">
-												<p>국내거래처관리</p>
-											</a>
-											<a href="#">
-												<p>채권관리</p>
-											</a>
-											<a href="#">
-												<p>반품관리</p>
-											</a>
-											<a href="#">
-												<p>영업전표</p>
-											</a>
-											<a href="#">
-												<p>매출현황</p>
-											</a>
-									</li>
-									<li>
-										<h3>매장영업팀</h3>
-											<a href="#">
-												<p>매장관리</p>
-											</a>
-											<a href="#">
-												<p>발주관리</p>
-											</a>
-											<a href="#">
-												<p>고객관리</p>
-											</a>
-											<a href="#">
-												<p>창고관리</p>
-											</a>
-											<a href="#">
-												<p>행사관리</p>
-											</a>
-											<a href="#">
-												<p>온라인</p>
-											</a>
-									</li>
-									<li>
-										<h3>영업관리팀</h3>
-											<a href="#">
-												<p>영업실적관리</p>
-											</a>
-											<a href="#">
-												<p>부서별매출</p>
-											</a>
-									</li>
-									<li>
-										<h3>생산팀</h3>
-											<a href="#">
-												<p>생산 / 제조</p>
-											</a>
-											<a href="#">
-												<p>생산의뢰</p>
-											</a>
-											<a href="#">
-												<p>작업지시서</p>
-											</a>
-											<a href="#">
-												<p>생산실적관리</p>
-											</a>
-											<a href="#">
-												<p>작업실적관리</p>
-											</a>
-											<a href="#">
-												<p>불량분석</p>
-											</a>
-											<a href="#">
-												<p>공정재고관리</p>
-											</a>
-											<a href="#">
-												<p>발주관리</p>
-											</a>
-											<a href="#">
-												<p>매입관리</p>
-											</a>
-											<a href="#">
-												<p>재고관리</p>
-											</a>
-											<a href="#">
-												<p>재고평가</p>
-											</a>
-									</li>
-									<li>
-										<h3>구매팀</h3>
-											<a href="#">
-												<p>발주관리</p>
-											</a>
-											<a href="#">
-												<p>매입관리</p>
-											</a>
-											<a href="#">
-												<p>재고관리</p>
-											</a>
-											<a href="#">
-												<p>재고평가</p>
-											</a>
-									</li>
-									<li>
-										<h3>품질관리팀</h3>
-											<a href="#">
-												<p>품질검사</p>
-											</a>
-											<a href="#">
-												<p>설비 / 장비 관리</p>
-											</a>
-											<a href="#">
-												<p>클레임(기업)</p>
-											</a>
-											<a href="#">
-												<p>CS(소비자)</p>
-											</a>
-									</li>
-									<li>
-										<h3>물류팀</h3>
-											<a href="#">
-												<p>재고관리</p>
-											</a>
-											<a href="#">
-												<p>입출고관리</p>
-											</a>
-											<a href="#">
-												<p>폐기 / 물류 감소</p>
-											</a>
-									</li>
-								</ul>
-							</section>
+			<!-- Actions -->
+			<section>
+				<ul class="actions stacked">
+					<li><input type="button" onclick="logout()" value="LOGOUT" /></li>
+				</ul>
+			</section>
 
-						<!-- Actions -->
-							<section>
-								<ul class="actions stacked">
-									<li><input type="button" onclick="logout()" value="LOGOUT" /></li>
-								</ul>
-							</section>
+		</section>
+	</div>
 
-					</section>
-
-</div>
-
-<script type="text/javascript">
+		
+	<!-- 로그인 세션 -->
+	<!-- 		
+	<script type="text/javascript" th:inline="javascript" th:if="${session.login==null}">
+		alert("로그인세션이 만료되었습니다.");
+		location.href="${#httpServletRequest.getContextPath()}/";
+	</script>
+	 
+	<script type="text/javascript" th:inline="javascript" th:if="${session.comcode_code==null}">
+		alert("comcode세션이 만료되었습니다.");
+		location.href="${#httpServletRequest.getContextPath()}/";
+	</script>
+ 	-->
+	<script type="text/javascript" th:inline="javascript">
+		
+		// 로그아웃까지 남은 시간을 가져오는 함수
+		function updateSessionTime() {
+		    const sessionStartTime = new Date(${session.creationTime});
+		    const sessionTimeout = ${session.maxInactiveInterval} * 1000;
+		    const currentTime = new Date();
+		
+		    // 세션의 남은 시간 계산
+		    const remainingTime = new Date(sessionStartTime.getTime() + sessionTimeout - currentTime.getTime());
+		
+		    const minutes = remainingTime.getMinutes();
+		    const seconds = remainingTime.getSeconds();
+		    let min = minutes < 10 ? '0' : '';
+		    let sec = seconds < 10 ? '0' : '';
+		    const formattedTime = min+minutes+'분'+sec+seconds+'초';
+		    
+		    document.getElementById('sessionTime').textContent = formattedTime; 
+		}
+		
+		updateSessionTime();
+		setInterval(updateSessionTime, 1000);
+		
+		// logout
+		function logout() {
+		    var xhr = new XMLHttpRequest();
+		    xhr.open("GET", "${#httpServletRequest.getContextPath()}/logout", true);
+		    
+		    xhr.onreadystatechange = function () {
+		        if (xhr.readyState === 4 && xhr.status === 200) {
+		            alert("로그아웃되었습니다.");
+		            location.href = "${#httpServletRequest.getContextPath()}/";
+		        }
+		    };
+		    xhr.send();
+		}
 	
-	// 로그아웃까지 남은 시간을 가져오는 함수
-	function updateSessionTime() {
-	    const sessionStartTime = new Date(${pageContext.session.creationTime});
-	    const sessionTimeout = ${pageContext.session.maxInactiveInterval} * 1000;
-	    const currentTime = new Date();
-	
-	    // 세션의 남은 시간 계산
-	    const remainingTime = new Date(sessionStartTime.getTime() + sessionTimeout - currentTime.getTime());
-	
-	    const minutes = remainingTime.getMinutes();
-	    const seconds = remainingTime.getSeconds();
-	    let min = minutes < 10 ? '0' : '';
-	    let sec = seconds < 10 ? '0' : '';
-	    const formattedTime = min+minutes+'분'+sec+seconds+'초';
-	    
-	    document.getElementById('sessionTime').textContent = formattedTime; 
-	}
-	
-	updateSessionTime();
-	setInterval(updateSessionTime, 1000);
-	
-	// logout
-	function logout() {
-	    var xhr = new XMLHttpRequest();
-	    xhr.open("GET", "${pageContext.request.contextPath}/logout", true);
-	    
-	    xhr.onreadystatechange = function () {
-	        if (xhr.readyState === 4 && xhr.status === 200) {
-	            alert("로그아웃되었습니다.");
-	            location.href = "${pageContext.request.contextPath}/";
-	        }
-	    };
-	    xhr.send();
-	}
+	</script>
 
-</script>
+</th:block>
 
-<div>
-
+</html>
